[gd_scene load_steps=5 format=3 uid="uid://bx7jqvs8er1ee"]

[ext_resource type="PackedScene" uid="uid://chld75je6ysiw" path="res://player.tscn" id="1_ru3bt"]
[ext_resource type="Script" path="res://survivors_game.gd" id="1_x6re0"]
[ext_resource type="PackedScene" uid="uid://ddbolsr7opvos" path="res://pine_tree.tscn" id="2_mwdu0"]

[sub_resource type="Curve2D" id="Curve2D_5fida"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1576, -57, 0, 0, 0, 0, 1576, 843, 0, 0, 0, 0, -46, 847, 0, 0, 0, 0, -46, -58, 0, 0, 0, 0, 1576, -57)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_x6re0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1511.0
offset_bottom = 762.0

[node name="Player" parent="." instance=ExtResource("1_ru3bt")]
position = Vector2(750, 391)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-750, -391)
curve = SubResource("Curve2D_5fida")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(1574.39, -57.001)
rotation = 0.000616523
progress = 5047.17

[node name="PineTree" parent="." instance=ExtResource("2_mwdu0")]
position = Vector2(133, 533)

[node name="PineTree2" parent="." instance=ExtResource("2_mwdu0")]
position = Vector2(193, 156)

[node name="PineTree3" parent="." instance=ExtResource("2_mwdu0")]
position = Vector2(1250, 141)

[node name="PineTree4" parent="." instance=ExtResource("2_mwdu0")]
position = Vector2(1335, 175)

[node name="PineTree5" parent="." instance=ExtResource("2_mwdu0")]
position = Vector2(1245, 192)

[node name="PineTree6" parent="." instance=ExtResource("2_mwdu0")]
position = Vector2(1287, 606)

[node name="PineTree7" parent="." instance=ExtResource("2_mwdu0")]
position = Vector2(1202, 640)

[node name="MobSpawner" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.482353)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 176
text = "Game Over"

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="MobSpawner" to="." method="_on_mob_spawner_timeout"]
